SpongeOSRS: implement Guice, remove/ignore injected-src